--- a/SNN/SNN.ipynb
+++ b/SNN/SNN.ipynb
@@ -836,7 +836,7 @@
     "    if read_from_stored_model:\n",
     "        \n",
     "        for fc in range(10):\n",
-    "            with open('train_eval_test_data_'+str(fold_count)+'.pkl','rb') as f:\n",
+    "             with open('train_eval_test_data_'+str(fold_count)+'.pkl','rb') as f:\n",
     "                X1_train, X2_train, y1_label_train, y2_label_train, y_simil_train, X1_eval, X2_eval, y1_label_eval, y2_label_eval, y_simil_eval, X_test_tokenized_padded, y_test = pickle.load(f)\n",
     "            final_model = total_model(maxlen, max_features,embedding_dim)\n",
     "            checkpoint_path = \"saved_model/SNN/\"+str(fold_count)+\"/cp.ckpt\"\n",
@@ -844,6 +844,45 @@
     "            fold_count += 1\n",
     "            latest = tf.train.latest_checkpoint(checkpoint_dir)\n",
     "            final_model.load_weights(latest)\n",
+    "            _,output_of_siamese_layer,check,_,_=final_model.predict([X_test_tokenized_padded, X_test_tokenized_padded])\n",
+    "            tsne_converted_output_layer = TSNE().fit_transform(output_of_siamese_layer)\n",
+    "            two_emotion_labels = np.where(y_test==1, 'positive','negative')\n",
+    "            cdict = {'positive':'blue','negative':'red'}\n",
+    "            tsne_converted_input_layer = TSNE().fit_transform(X_test_tokenized_padded)\n",
+    "            if np.array_equal(output_of_siamese_layer, check):\n",
+    "                print('They are the same')\n",
+    "            \n",
+    "            print(output_of_siamese_layer.shape)\n",
+    "            print(tsne_converted_input_layer[0])\n",
+    "            print(tsne_converted_input_layer[0][0])\n",
+    "            print(two_emotion_labels)\n",
+    "            plt.figure(figsize=(10,10))\n",
+    "            plt.subplot(121)\n",
+    "            x_axis = tsne_converted_input_layer[:,0]\n",
+    "            y_axis = tsne_converted_input_layer[:,1]\n",
+    "            for g in np.unique(two_emotion_labels):\n",
+    "                i = np.where(two_emotion_labels == g)\n",
+    "                \n",
+    "                plt.scatter(x_axis[i], y_axis[i], c= cdict[g], label = g)\n",
+    "                plt.title('Input')\n",
+    "                plt.xlabel('TSNE-1', fontsize = 14)\n",
+    "                plt.ylabel('TSNE-2', fontsize = 14)\n",
+    "            plt.subplot(122)\n",
+    "            \n",
+    "            x_axis = tsne_converted_output_layer[:,0]\n",
+    "            y_axis = tsne_converted_output_layer[:,1]\n",
+    "            print(x_axis.shape)\n",
+    "            for g in np.unique(two_emotion_labels):\n",
+    "                i = np.where(two_emotion_labels == g)\n",
+    "                \n",
+    "                plt.scatter(x_axis[i], y_axis[i], c= cdict[g], label = g)\n",
+    "                plt.title('Output')\n",
+    "                plt.xlabel('TSNE-1', fontsize = 14)\n",
+    "                plt.ylabel('TSNE-2', fontsize = 14)\n",
+    "            plt.suptitle('Fold '+str(fold_count-1), fontsize = 14)\n",
+    "            plt.savefig('Figures/Fold '+str(fold_count-1)+'.jpg')\n",
+    "            \n",
+    "            \n",
     "            predictions =  tf.keras.activations.sigmoid(final_model.predict([X_test_tokenized_padded, X_test_tokenized_padded])[-1])\n",
     "\n",
     "            predictions = np.where(predictions>0.5, 1, -1)\n",
